[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Enemy2.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 22.998

[sub_resource type="CircleShape2D" id=2]
radius = 224.143

[sub_resource type="CircleShape2D" id=3]
radius = 88.0

[node name="Enemy2" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )
jump_stop = 1.15

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Detectionbox" type="CollisionShape2D" parent="Detection"]
modulate = Color( 0, 0.667969, 0.151337, 1 )
shape = SubResource( 2 )

[node name="Attack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackRange" type="CollisionShape2D" parent="Attack"]
shape = SubResource( 3 )

[node name="prepareAttack" type="Timer" parent="."]
wait_time = 0.5

[node name="recover" type="Timer" parent="."]
wait_time = 0.3

[node name="cooldownTimer" type="Timer" parent="."]
wait_time = 2.5
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="timeout" from="prepareAttack" to="." method="_on_prepareAttack_timeout"]
[connection signal="timeout" from="recover" to="." method="_on_recover_timeout"]
[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldownTimer_timeout"]
